[gd_scene load_steps=2 format=3 uid="uid://c6n2a17d3rxnm"]

[ext_resource type="Script" uid="uid://k1do6k8ylald" path="res://battle_template/battle_template.gd" id="1_qxrgt"]

[node name="BattleTemplate" type="Node3D"]
script = ExtResource("1_qxrgt")

[node name="Enemies" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.00624)

[node name="Slot1" type="Marker3D" parent="Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.00555, 0, -1.00832)

[node name="Slot2" type="Marker3D" parent="Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0199, 0, -1.00229)

[node name="Slot3" type="Marker3D" parent="Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.990344)

[node name="Slot4" type="Marker3D" parent="Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.997007, 0, -1.01283)

[node name="Slot5" type="Marker3D" parent="Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.00571, 0, -1.01365)

[node name="Party" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.99909)

[node name="Slot1" type="Marker3D" parent="Party"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.99108, 0, 0)

[node name="Slot2" type="Marker3D" parent="Party"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00145853, 0, 0)

[node name="Slot3" type="Marker3D" parent="Party"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.998056, 0, 0)
